--- a/todo.org
+++ b/todo.org
@@ -32,6 +32,10 @@ will be properly tidied away on timeout.
 
 *** TODO Will need to be able to trigger a reconfiguration
 
+*** TODO validate all command maps in the configuration
+
+need to check for clashes
+
 ** Throughout
 
 *** TODO Proper logging
